VE2590 Create Experiment From template and remove the duplicate Service route
